Adds pagination for users, memes and meme templates. Updates REST API documentation accordingly.
